Add Muse theater management API
